--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-game></app-game>
+  <nav class="flex-container">
+    <a routerLink="/index" routerLinkActive="active">Home</a>
+    <a routerLink="/new" routerLinkActive="active">New</a>
+    <a routerLink="/continue" routerLinkActive="active">Continue</a>
+  </nav>
+  <header>
+    <h1>
+      Welcome to {{ title }}!
+    </h1>
+  </header>
+  <router-outlet>
+
+  </router-outlet>
 </div>
