--- a/src/app/game/game/game.component.html
+++ b/src/app/game/game/game.component.html
@@ -1,3 +1,14 @@
-<app-header></app-header>
-<app-board></app-board>
-<app-footer></app-footer>
+<div [ngSwitch]="status">
+  <div *ngSwitchCase="'success'">
+    <app-header></app-header>
+    <app-board></app-board>
+    <app-footer></app-footer>
+  </div>
+  <div *ngSwitchCase="'fetching'">
+    Loading...
+  </div>
+  <div *ngSwitchDefault>
+    There is an error in the backend communication. <br />
+    Error: {{status}}
+  </div>
+</div>
