--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,32 @@
-.flex-container {
+body {
+  display: block;
+  margin: 0px !important;
+}
+
+nav {
+  background-color: #333;
+  overflow: hidden;
   display: flex;
-  flex-direction: row;
-  margin: 10px;
   text-align: center;
   justify-content: center;
+  margin: 0px 0px 10px 0px;
 
   a {
-    margin: 10px;
-    font-size: 30px;
-  }
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 
+    &:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    &.active {
+      background-color: #0168b3;
+      color: white;
+    }
+  }
 }
