--- a/src/app/game/header/header.component.html
+++ b/src/app/game/header/header.component.html
@@ -1,3 +1,6 @@
-<h2>
-  <span>{{ (stateService.state$ | async).turn }}</span>
-</h2>
+<header>
+  <h1>Welcome {{ (stateService.state$ | async).player_name }}!</h1>
+  <h2>
+    <span>{{ (stateService.state$ | async).turn }}</span>
+  </h2>
+</header>
