--- a/src/app/game/square/square.component.scss
+++ b/src/app/game/square/square.component.scss
@@ -1,12 +1,17 @@
 $buttonSizeWidth: 120px;
 $buttonSizeHeight: 120px;
 
-
 button {
   height: $buttonSizeHeight;
   width: $buttonSizeWidth;
   margin: 10px 0px 0px 10px;
   font-size: 500%;
+  background-color: #78bec5;
+  border-radius: 14px;
+  color: #fff;
+  margin: 5px;
+  font-size: 50px;
+  outline: none;
 }
 
 .clickable {
