--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,3 @@
-<div style="text-align: center">
+<div class="front-body">
   <h2>Hello! You can start a new game or land an already started one.</h2>
 </div>
