--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
-<!-- The content below is only a placeholder and can be replaced. -->
 <div style="text-align:center">
   <nav>
     <a routerLink="/index" routerLinkActive="active">Home</a>
     <a routerLink="/new" routerLinkActive="active">New</a>
     <a routerLink="/continue" routerLinkActive="active">Continue</a>
+    <a routerLink="/save" routerLinkActive="active">Saved Game</a>
   </nav>
-  <!--
-    <header>
-      <h1>
-        Welcome to {{ title }}!
-      </h1>
-    </header>
-  -->
   <router-outlet> </router-outlet>
 </div>
