- add new feature for p2p second excersice

--- a/src/app/game/footer/footer.component.html
+++ b/src/app/game/footer/footer.component.html
@@ -4,5 +4,5 @@
     <span>{{ (stateService.state$ | async).movements }}</span>
   </h2>
   <button (click)="stateService.reset()">Reset</button>
-  <button (click)="stateService.saveStateGame()">Save</button>
+  <button (click)="saveGame()">Save</button>
 </div>
